--- a/portal2/style.css
+++ b/portal2/style.css
@@ -3,36 +3,65 @@
  * Portal End Credits Web by TylaKitty, xBytez & Valve is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.
  * Based on a work at xbytez.eu
 */
+
+@-webkit-keyframes buffer {    0% {  top: -40%;  }    80%, 100% {  top: 140%;  }    }
+   @-moz-keyframes buffer {    0% {  top: -40%;  }    80%, 100% {  top: 140%;  }    }
+     @-o-keyframes buffer {    0% {  top: -40%;  }    80%, 100% {  top: 140%;  }    }
+        @keyframes buffer {    0% {  top: -40%;  }    80%, 100% {  top: 140%;  }    }
+@-webkit-keyframes dots_down {    0% {  transform: translateY(-63%) scaleY(.5);  }    100% {  transform: translateY(-25.5%) scaleY(.5);  }    }
+   @-moz-keyframes dots_down {    0% {  transform: translateY(-63%) scaleY(.5);  }    100% {  transform: translateY(-25.5%) scaleY(.5);  }    }
+     @-o-keyframes dots_down {    0% {  transform: translateY(-63%) scaleY(.5);  }    100% {  transform: translateY(-25.5%) scaleY(.5);  }    }
+        @keyframes dots_down {    0% {  transform: translateY(-63%) scaleY(.5);  }    100% {  transform: translateY(-25.5%) scaleY(.5);  }    }
+@-webkit-keyframes dots_up {    0% {  transform: translateY(-25.5%) scaleY(.5);  }    100% {  transform: translateY(-63%) scaleY(.5);  }    }
+   @-moz-keyframes dots_up {    0% {  transform: translateY(-25.5%) scaleY(.5);  }    100% {  transform: translateY(-63%) scaleY(.5);  }    }
+     @-o-keyframes dots_up {    0% {  transform: translateY(-25.5%) scaleY(.5);  }    100% {  transform: translateY(-63%) scaleY(.5);  }    }
+        @keyframes dots_up {    0% {  transform: translateY(-25.5%) scaleY(.5);  }    100% {  transform: translateY(-63%) scaleY(.5);  }    }
+
 body {
     color: #967533;
-    font-family:  monospace;
+    font-family: monospace;
     font-size: 9pt;
-    line-height: 1.60em;
-    margin: 1em;
-    width: 1080px;
-    height: 720px;
+    line-height: 100vh;
+    margin: 0;
+    text-align: center;
     position: relative;
-    background-color:#7e521d;
-    background: -moz-radial-gradient(53% 53%, #7e521d, #4a3219 100%) no-repeat center center fixed;
-    background: -webkit-radial-gradient(53% 53%, #7e521d, #4a3219 100%) no-repeat center center fixed;
-    background: -o-radial-gradient(53% 53%, #7e521d, #4a3219 100%) no-repeat center center fixed;
-    background: -ms-radial-gradient(53% 53%, #7e521d, #4a3219 100%) no-repeat center center fixed;
-    background: radial-gradient(100% 75%, #7e521d, #4a3219 100%) no-repeat center center fixed;
-    -moz-background-size: cover;
+    background: #7e521d; /* Old browsers */
+    background: -moz-radial-gradient(center, ellipse cover, #7e521d 0%, #7e521d 45%, #4a3219 100%); /* FF3.6-15 */
+    background: -webkit-radial-gradient(center, ellipse cover, #7e521d 0%,#7e521d 45%,#4a3219 100%); /* Chrome10-25,Safari5.1-6 */
+    background: radial-gradient(ellipse at center, #7e521d 0%,#7e521d 45%,#4a3219 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7e521d', endColorstr='#4a3219',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     -webkit-background-size: cover;
-    -o-background-size: cover;
-    -ms-background-size: cover;
-    background-size: cover;
+       -moz-background-size: cover;
+        -ms-background-size: cover;
+         -o-background-size: cover;
+            background-size: cover;
 }
 
 #container {
-    position: absolute;
-    left: 2.5em;
-    right: 2.5em;
-    top: 2.5em;
-    bottom: 2.5em;
-    border: 2px solid;
+    position: relative;
+    border-width: 0 2px 2px 2px;
+    border-style: solid;
     border-radius: 1px;
+    width: 1080px;
+    height: 600px;
+    vertical-align: middle;
+    display: inline-block;
+}
+#container::before {
+    content: "";
+    background-color: #957532;
+    position: absolute;
+    left: 0;
+    right: 36.8em;
+    height: 2px;
+}
+#container::after {
+    content: "";
+    background-color: #957532;
+    position: absolute;
+    right: 0;
+    width: 1.2em;
+    height: 2px;
 }
 #lyrics {
     position: absolute;
@@ -40,7 +69,7 @@ body {
     top: 2em;
     width: 30em;
     font-size: 15pt;
-    line-height: 1.75;
+    line-height: 1.6;
 }
 
 #lyricstext {
@@ -54,7 +83,7 @@ body {
 
 #credits {
     position: absolute;
-    left: 20em;
+    right: 1.5em;
     top: 5em;
     width: 30em;
     color: #1F0000;
@@ -69,32 +98,38 @@ body {
     bottom:1em;
     text-align: right;
     vertical-align: bottom;
-    line-height: 1.75;
+    line-height: 1.6;
 }
 #ui {
     position: absolute;
     right: 1em;
+    line-height: 1;
+    cursor: default;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+         -o-user-select: none;
+            user-select: none;
 }
 #ui > div {
     border: 2px solid;
     display: inline-block;
-    font-size: 18px;
+    font-size: 22px;
     transform: translateY(-.5em);
-    background-color: #4a3219;
     vertical-align: top;
-    height: 100px;
+    height: 120px;
     box-sizing: border-box;
     line-height: 1.2;
 }
 #uiright {
-    width: 100px;
+    width: 120px;
     padding: 7px;
 }
 #uimiddle {
     padding: 2px;
 }
 #uileft {
-    width: 200px;
+    width: 240px;
     padding: 2px;
 }
 #logo {
@@ -108,15 +143,50 @@ body {
 }
 #uileft > div {
     vertical-align: top;
-    line-height: 0.2;
+    transform-origin: 50% 50%;
     font-size: 30px;
     position: absolute;
+    line-height: 0.6;
+    font-weight: bold;
 }
 #dotsleft {
-    left: 0;
-    top: -17px;
+    left: 0.25em;
+    top: 0;
+    -webkit-animation: dots_down 2.5s linear 0s infinite normal running;
+       -moz-animation: dots_down 2.5s linear 0s infinite normal running;
+         -o-animation: dots_down 2.5s linear 0s infinite normal running;
+            animation: dots_down 2.5s linear 0s infinite normal running;
 }
 #dotsright {
-    right: 0;
-    top: -47px;
+    right: 0.25em;
+    top: 0;
+    -webkit-animation: dots_up 2.5s linear 0s infinite normal running;
+       -moz-animation: dots_up 2.5s linear 0s infinite normal running;
+         -o-animation: dots_up 2.5s linear 0s infinite normal running;
+            animation: dots_up 2.5s linear 0s infinite normal running;
+}
+
+#volume {
+    position: absolute;
+    right: 0.5em;
+    bottom: 0.5em;
+}
+
+#buffer {
+    height: 40%;
+    width: 100%;
+    position: fixed;
+    opacity: .2;
+    z-index: 10;
+    pointer-events: none;
+
+    background: -webkit-linear-gradient(top, rgba(126,82,29,0) 0%,rgba(126,82,29,0) 1%,rgba(126,82,29,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: -moz-linear-gradient(top, rgba(126,82,29,0) 0%, rgba(126,82,29,0) 1%, rgba(126,82,29,1) 100%); /* FF3.6-15 */
+    background: linear-gradient(to bottom, rgba(126,82,29,0) 0%,rgba(126,82,29,0) 1%,rgba(126,82,29,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007e521d', endColorstr='#7e521d',GradientType=0 ); /* IE6-9 */
+
+    -webkit-animation: buffer 2s linear 1s infinite normal running;
+       -moz-animation: buffer 2s linear 1s infinite normal running;
+         -o-animation: buffer 2s linear 1s infinite normal running;
+            animation: buffer 2s linear 1s infinite normal running;
 }
