Improvements pt. 3 :fire:
- Finished UI
- OCD'd the single quotes and spaces on the JS

TODO:
- God damn it, that 100vh line-height is gonna haunt me
- I've noticed the credits are a bit out of sync with the original
scene, but I'm not sure I care enough to fix it

--- a/portal2/style.css
+++ b/portal2/style.css
@@ -119,7 +119,7 @@ body {
     vertical-align: top;
     height: 120px;
     box-sizing: border-box;
-    line-height: 1.2;
+    line-height: 1.3;
 }
 #uiright {
     width: 120px;
@@ -127,6 +127,24 @@ body {
 }
 #uimiddle {
     padding: 2px;
+}
+#uimiddle::before {
+    content: "";
+    background-color: #957532;
+    position: absolute;
+    top: 0.4em;
+    left: -0.4em;
+    width: 0.4em;
+    height: 2px;
+}
+#uimiddle::after {
+    content: "";
+    background-color: #957532;
+    position: absolute;
+    top: 0.4em;
+    right: -0.4em;
+    width: 0.4em;
+    height: 2px;
 }
 #uileft {
     width: 240px;
